deployed app update

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section class="col-12 col-md-8">
 
             <article class="p-2 border border-dark rounded-3 w-100">
-                <h2 id="city-name" class="mb-4">City name</h2>
+                <div class="d-flex justify-content-center"><h2 id="city-name" class="mb-4">City name </h2><img id="wicon" src="http://openweathermap.org/img/w/04d.png" alt="Weather icon"></div>
                 <p class="fs-5 fw-bold">Temp: <span id="current-temp"></span></p>
                 <p class="fs-5 fw-bold">Wind: <span id="current-wind"></span></p>
                 <p class="fs-5 fw-bold">Humidity: <span id="current-hum"></span></p>
