--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 
         <section class="col-12 col-md-8">
 
-            <article class="p-2 border border-dark rounded-3 w-100">
-                <div class="d-flex justify-content-center"><h2 id="city-name" class="mb-4">City name </h2><img id="wicon" src="http://openweathermap.org/img/w/04d.png" alt="Weather icon"></div>
+            <article id="current-forecast" class="p-2 border border-dark rounded-3 w-100">
+                <div class="d-flex justify-content-center">
+                    <h2 id="city-name" class="mb-4">City name </h2>
+                    <img id="wicon" src="http://openweathermap.org/img/w/04d.png" alt="Weather icon">
+                </div>
                 <p class="fs-5 fw-bold">Temp: <span id="current-temp"></span></p>
                 <p class="fs-5 fw-bold">Wind: <span id="current-wind"></span></p>
                 <p class="fs-5 fw-bold">Humidity: <span id="current-hum"></span></p>
@@ -51,7 +54,6 @@
                     <div class="weather-card card text-white bg-primary h-50 m-2">
                         <h5 class="card-header">18/04/2021</h5>
                         <div class="card-body">
-                          <!-- <h5 class="card-title">Primary card title</h5> -->
                           <i class="d-flex justify-content-center"><img id="wicon" src="" alt="Weather icon"></i>
                           <p class="card-text fw-bold">Temp: <span> 73.72 °F</span></p>
                           <p class="card-text fw-bold">Wind: <span> 9.53 MPH</span></p>
@@ -62,8 +64,7 @@
                     <div class="weather-card card text-white bg-primary h-50 m-2">
                         <h5 class="card-header">18/04/2021</h5>
                         <div class="card-body">
-                          <!-- <h5 class="card-title">Primary card title</h5> -->
-                          <span class="d-flex justify-content-center fs-1">☀️</span>
+                          <i class="d-flex justify-content-center"><img id="wicon" src="" alt="Weather icon"></i>
                           <p class="card-text fw-bold">Temp: <span> 73.72 °F</span></p>
                           <p class="card-text fw-bold">Wind: <span> 9.53 MPH</span></p>
                           <p class="card-text fw-bold">Humudity: <span> 66%</span></p>
@@ -73,8 +74,7 @@
                     <div class="weather-card card text-white bg-primary h-50 m-2">
                         <h5 class="card-header">18/04/2021</h5>
                         <div class="card-body">
-                          <!-- <h5 class="card-title">Primary card title</h5> -->
-                          <span class="d-flex justify-content-center fs-1">☁️</span>
+                          <i class="d-flex justify-content-center"><img id="wicon" src="" alt="Weather icon"></i>
                           <p class="card-text fw-bold">Temp: <span> 73.72 °F</span></p>
                           <p class="card-text fw-bold">Wind: <span> 9.53 MPH</span></p>
                           <p class="card-text fw-bold">Humudity: <span> 66%</span></p>
@@ -84,8 +84,7 @@
                     <div class="weather-card card text-white bg-primary h-50 m-2">
                         <h5 class="card-header">18/04/2021</h5>
                         <div class="card-body">
-                          <!-- <h5 class="card-title">Primary card title</h5> -->
-                          <span class="d-flex justify-content-center fs-1">⛅</span>
+                          <i class="d-flex justify-content-center"><img id="wicon" src="" alt="Weather icon"></i>
                           <p class="card-text fw-bold">Temp: <span> 73.72 °F</span></p>
                           <p class="card-text fw-bold">Wind: <span> 9.53 MPH</span></p>
                           <p class="card-text fw-bold">Humudity: <span> 66%</span></p>
@@ -95,13 +94,12 @@
                     <div class="weather-card card text-white bg-primary h-50 m-2">
                         <h5 class="card-header">18/04/2021</h5>
                         <div class="card-body">
-                          <!-- <h5 class="card-title">Primary card title</h5> -->
-                          <span class="d-flex justify-content-center fs-1">🌧️</span>
+                          <i class="d-flex justify-content-center"><img id="wicon" src="" alt="Weather icon"></i>
                           <p class="card-text fw-bold">Temp: <span> 73.72 °F</span></p>
                           <p class="card-text fw-bold">Wind: <span> 9.53 MPH</span></p>
                           <p class="card-text fw-bold">Humudity: <span> 66%</span></p>
                         </div>
-                    </div> 
+                    </div>  
         
                 </div>                
                 
