css background update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
   </head>
   <body>
     <header>
-      <h1 class="p-3 col-12 bg-primary bg-gradient text-light d-flex justify-content-center">Weather Dashboard</h1>
+      <h1
+        class="p-3 col-12 bg-primary bg-gradient text-light d-flex justify-content-center"
+      >
+        Weather Dashboard
+      </h1>
     </header>
 
     <main class="row m-2">
@@ -49,11 +53,7 @@
         >
           <div class="d-flex justify-content-center">
             <h2 id="city-name" class="mb-4">City name</h2>
-            <img
-              id="wicon"
-              src="http://openweathermap.org/img/w/04d.png"
-              alt="Weather icon"
-            />
+            <img />
           </div>
           <p class="fs-5 fw-bold">Temp: <span id="current-temp"></span></p>
           <p class="fs-5 fw-bold">Wind: <span id="current-wind"></span></p>
@@ -70,12 +70,7 @@
             <div class="weather-card card text-white bg-primary h-50 m-2">
               <h5 class="card-header">1st day</h5>
               <div class="card-body">
-                <i class="d-flex justify-content-center"
-                  ><img
-                    id="wicon"
-                    src="http://openweathermap.org/img/w/04d.png"
-                    alt="Weather icon"
-                /></i>
+                <i class="d-flex justify-content-center"><img /></i>
                 <p class="card-text fw-bold">Temp: <span></span></p>
                 <p class="card-text fw-bold">Wind: <span></span></p>
                 <p class="card-text fw-bold">Humudity: <span></span></p>
@@ -85,12 +80,7 @@
             <div class="weather-card card text-white bg-primary h-50 m-2">
               <h5 class="card-header">2nd day</h5>
               <div class="card-body">
-                <i class="d-flex justify-content-center"
-                  ><img
-                    id="wicon"
-                    src="http://openweathermap.org/img/w/04d.png"
-                    alt="Weather icon"
-                /></i>
+                <i class="d-flex justify-content-center"><img /></i>
                 <p class="card-text fw-bold">Temp: <span></span></p>
                 <p class="card-text fw-bold">Wind: <span></span></p>
                 <p class="card-text fw-bold">Humudity: <span></span></p>
@@ -100,12 +90,7 @@
             <div class="weather-card card text-white bg-primary h-50 m-2">
               <h5 class="card-header">3th day</h5>
               <div class="card-body">
-                <i class="d-flex justify-content-center"
-                  ><img
-                    id="wicon"
-                    src="http://openweathermap.org/img/w/04d.png"
-                    alt="Weather icon"
-                /></i>
+                <i class="d-flex justify-content-center"><img /></i>
                 <p class="card-text fw-bold">Temp: <span></span></p>
                 <p class="card-text fw-bold">Wind: <span></span></p>
                 <p class="card-text fw-bold">Humudity: <span></span></p>
@@ -115,12 +100,7 @@
             <div class="weather-card card text-white bg-primary h-50 m-2">
               <h5 class="card-header">4th day</h5>
               <div class="card-body">
-                <i class="d-flex justify-content-center"
-                  ><img
-                    id="wicon"
-                    src="http://openweathermap.org/img/w/04d.png"
-                    alt="Weather icon"
-                /></i>
+                <i class="d-flex justify-content-center"><img /></i>
                 <p class="card-text fw-bold">Temp: <span></span></p>
                 <p class="card-text fw-bold">Wind: <span></span></p>
                 <p class="card-text fw-bold">Humudity: <span></span></p>
@@ -130,12 +110,7 @@
             <div class="weather-card card text-white bg-primary h-50 m-2">
               <h5 class="card-header">5th day</h5>
               <div class="card-body">
-                <i class="d-flex justify-content-center"
-                  ><img
-                    id="wicon"
-                    src="http://openweathermap.org/img/w/04d.png"
-                    alt="Weather icon"
-                /></i>
+                <i class="d-flex justify-content-center"><img /></i>
                 <p class="card-text fw-bold">Temp: <span></span></p>
                 <p class="card-text fw-bold">Wind: <span></span></p>
                 <p class="card-text fw-bold">Humudity: <span></span></p>
